fix grid gaps

--- a/homepage/static/css/style.css
+++ b/homepage/static/css/style.css
@@ -4,7 +4,11 @@
 }
 
 .wrapper {
+    margin: 5rem;
     text-align: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 2rem;
 }
 
 .w-background {
@@ -17,67 +21,47 @@
 
 .item-card-1 {
     transition: all .2s;
-    display: inline-block;
-    vertical-align: middle;
     text-align: left;
     border-radius: 40px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    height: 300px;
-    width: 300px;
-    padding: 100px;
-    margin: 10px;
+    aspect-ratio: 1/ 1;
+    object-fit: cover;
+    grid-column: span 1;
+    grid-row: span 1;
 }
-.item-card-2 {
+/* .item-card-2 {
     transition: all .2s;
-    display: inline-block;
-    vertical-align: middle;
     text-align: left;
     border-radius: 40px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    height: 300px;
-    width: 830px;
-    padding: 100px;
-    margin: 10px;
-}
+    aspect-ratio: 2/ 1;
+    object-fit: cover;
+    grid-column: span 2;
+    grid-row: span 1;
+} */
 .item-card-4 {
     transition: all .2s;
-    display: inline-block;
-    vertical-align: middle;
     text-align: left;
     border-radius: 40px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    height: 830px;
-    width: 830px;
-    padding: 100px;
-    margin: 10px;
+    aspect-ratio: 1/ 1;
+    object-fit: cover;
+    grid-column: span 2;
+    grid-row: span 2;
 }
 
-body {
-    /* display: flex; */
-    font-family: 'Courier New', Courier, monospace;
-}
-
-.item-card-1:hover {
-    transition: all .2s;
-    padding: 120px;
-}
-.item-card-2:hover {
-    transition: all .2s;
-    padding: 120px;
-}
-.item-card-4:hover {
-    transition: all .2s;
-    padding: 120px;
+.item-card-content {
+    padding: 2rem;
 }
 
 .item-card-1:hover h1 {
     transition: all .2s;
     color: #00B6FA;
 }
-.item-card-2:hover h1 {
+/* .item-card-2:hover h1 {
     transition: all .2s;
     color: #00B6FA;
-}
+} */
 .item-card-4:hover h1 {
     transition: all .2s;
     color: #00B6FA;
@@ -87,10 +71,10 @@ body {
     transition: all .2s;
     color: #01245B;
 }
-.item-card-2:hover h4 {
+/* .item-card-2:hover h4 {
     transition: all .2s;
     color: #01245B;
-}
+} */
 .item-card-4:hover h4 {
     transition: all .2s;
     color: #01245B;
@@ -104,4 +88,20 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+body {
+    /* display: flex; */
+    font-family: 'Courier New', Courier, monospace;
+}
+
+/* mobile layout */
+@media only screen and (max-width: 1200px) {
+    .wrapper {
+        margin: 1rem;
+        text-align: center;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 1rem;
+    }
 }
